# par_lab

./: .gitignore  CMakeLists.txt  README.md  core.cpp  defs.h  main_mpi.cpp  main_omp.cpp  main_threaded.cpp  timing.cpp
